--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flowcast"
-version = "0.2.1"
+version = "0.2.2.rc1"
 description = "A framework for dynamically stringing together operations over gridded netcdf data, to create derived insights"
 authors = ["David Samson <david@jataware.com>"]
 license = "GPL-3.0-or-later"
@@ -8,19 +8,23 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "<3.12,>=3.8"
-xarray = "^2023.1.0"
+xarray = ">=0.19.0"
 matplotlib = "^3.7.3"
-geopandas = "^0.13.2"
+geopandas = ">=0.8.1"
 rasterio = "^1.3.8"
 cftime = "^1.6.2"
 nc-time-axis = "^1.4.1"
 scipy = "1.10.1"
 typing-extensions = "^4.8.0"
 rich = "^13.5.3"
-netCDF4 = "^1.6.4"
+netCDF4 = ">=1.5.3"
 tqdm = "^4.66.1"
 geofeather = "^0.3.0"
+requests = "^2.31.0"
 
+
+[tool.poetry.group.dev.dependencies]
+poetry = "^1.6.1"
 
 [build-system]
 requires = ["poetry-core"]
