--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flowcast"
-version = "0.2.2.rc2"
+version = "0.2.2.rc3"
 description = "A framework for dynamically stringing together operations over gridded netcdf data, to create derived insights"
 authors = ["David Samson <david@jataware.com>"]
 license = "GPL-3.0-or-later"
@@ -11,7 +11,7 @@ python = "<3.12,>=3.8"
 xarray = ">=0.19.0"
 matplotlib = ">=3.5.2"
 geopandas = ">=0.8.1"
-rasterio = "^1.3.8"
+rasterio = "1.2.10"
 cftime = "^1.6.2"
 nc-time-axis = "^1.4.1"
 scipy = "1.10.1"
