--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flowcast"
-version = "0.2.2.rc4"
+version = "0.2.2.rc5"
 description = "A framework for dynamically stringing together operations over gridded netcdf data, to create derived insights"
 authors = ["David Samson <david@jataware.com>"]
 license = "GPL-3.0-or-later"
@@ -20,7 +20,7 @@ rich = "^13.5.3"
 netCDF4 = ">=1.5.3"
 tqdm = "^4.66.1"
 geofeather = "^0.3.0"
-requests = "^2.31.0"
+requests = ">=2.28.1"
 
 
 [tool.poetry.group.dev.dependencies]
