--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flowcast"
-version = "0.2.2.rc6"
+version = "0.2.2.rc7"
 description = "A framework for dynamically stringing together operations over gridded netcdf data, to create derived insights"
 authors = ["David Samson <david@jataware.com>"]
 license = "GPL-3.0-or-later"
@@ -18,7 +18,7 @@ scipy = ">=1.6.2"
 typing-extensions = "^4.8.0"
 rich = "^13.5.3"
 netCDF4 = ">=1.5.3"
-tqdm = "^4.66.1"
+tqdm = ">=4.64.0"
 geofeather = "^0.3.0"
 requests = ">=2.28.1"
 
