--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flowcast"
-version = "0.3.5"
+version = "0.3.6"
 description = "A framework for dynamically stringing together operations over gridded netcdf data, to create derived insights"
 authors = ["David Samson <david@jataware.com>"]
 license = "GPL-3.0-or-later"
@@ -21,6 +21,8 @@ netCDF4 = ">=1.5.3"
 tqdm = ">=4.64.0"
 geofeather = "^0.3.0"
 requests = ">=2.28.1"
+scikit-learn = ">=1.3.2"
+numpy = ">=1.22"
 
 
 [tool.poetry.group.dev.dependencies]
